[package]
name = "dero_guard"
version = "0.1.0"
authors = ["Adrien Navratil <adrien1975@live.fr>", "Slixe <slixeprivate@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
failure = "0.1"
regex = "1.5"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.19"