[package]
name = "dero_guard_server"
version = "0.1.0"
authors = ["Adrien Navratil <adrien1975@live.fr>", "Slixe <slixeprivate@gmail.com>"]
edition = "2018"

[dependencies]
dero_guard = { path = "../dero_guard" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
failure = "0.1"